test/errors/wav-invalid/wav-invalid.rom
Error in `wav-invalid.asm` on line 2: `wav-invalid.txt` is not a WAV
